# chess_vs_ai_2024

./: CMakeLists.txt  README.md  main.cpp
